--- a/index.html
+++ b/index.html
@@ -80,18 +80,22 @@
                     <div class="row">
                         <div class="text-box">
                             <p>
-                                3-4<br>
-                                <strong>lördagsturneringar</strong><br>
-                                varje år, med poolspel<br>
+                                3-4<br class="line-break">
+                                <span class="avoid-wrap">
+                                    <strong><span class="avoid-wrap">lördags</span>&shy;<span class="avoid-wrap">turneringar</span></strong>
+                                </span>
+                                <br class="line-break">
+                                varje år, med poolspel
+                                <br class="line-break">
                                 & slutspel
                             </p>
                         </div>
                         <div class="text-box">
                             <p>
-                                <strong>
-                                    Klubbmästerskap
-                                </strong>
-                                <br>
+                                <span class="avoid-wrap">
+                                    <strong><span class="avoid-wrap">Klubb</span>&shy;mästerskap</strong>
+                                </span>
+                                <br class="line-break">
                                 (KM) under våren
                             </p>
                         </div>
@@ -99,13 +103,13 @@
                 </div>
             </div>
         </div>
-        <div id="information-text" class="row">
-            <div class="left-text">
+        <div class="information-text row">
+            <div class="left-text desktop-only">
                 <p>
                     Bokning till spel sker på klubbens intranät som alla medlemmar har tillgång till
                 </p>
             </div>
-            <div class="right-text">
+            <div class="right-text desktop-only">
                 <p>
                     Lördagsturneringar spelas på Kungliga Tennishallen och oftast i handikappform
                 </p>
