--- a/index.html
+++ b/index.html
@@ -41,78 +41,80 @@
             </div>
         </div>
         <div id="information-wrapper">
-            <div class="area-box left-box">
-                <div class="column">
-                    <h2 class="background-blur">Vi spelar på</h2>
-                    <div class="row">
-                        <div class="text-box">
-                            <p>
-                                <strong>
-                                    Onsdagar
-                                </strong>
-                                <br>
-                                18:30-20:00
-                                <br>
-                                i Kungliga
-                                <br>
-                                Tennishallen
-                            </p>
-                        </div>
-                        <div class="text-box">
-                            <p>
-                                <strong>
-                                    Lördagar
-                                </strong>
-                                <br>
-                                10:00-11:30
-                                <br>
-                                i Roslagshallen
-                                <br>
-                                (Roslagsgatan)
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="area-box right-box">
-                <div class="column">
-                    <h2 class="background-blur">Turneringar</h2>
-                    <div class="row">
-                        <div class="text-box">
-                            <p>
-                                3-4<br class="line-break">
-                                <span class="avoid-wrap">
-                                    <strong><span class="avoid-wrap">lördags</span>&shy;<span class="avoid-wrap">turneringar</span></strong>
-                                </span>
-                                <br class="line-break">
-                                varje år, med poolspel
-                                <br class="line-break">
-                                & slutspel
-                            </p>
-                        </div>
-                        <div class="text-box">
-                            <p>
-                                <span class="avoid-wrap">
-                                    <strong><span class="avoid-wrap">Klubb</span>&shy;mästerskap</strong>
-                                </span>
-                                <br class="line-break">
-                                (KM) under våren
-                            </p>
+            <div class="left">
+                <div class="area-box">
+                    <div class="column">
+                        <h2 class="background-blur">Vi spelar på</h2>
+                        <div class="row">
+                            <div class="text-box">
+                                <p>
+                                    <strong>
+                                        Onsdagar
+                                    </strong>
+                                    <br>
+                                    18:30-20:00
+                                    <br>
+                                    i Kungliga
+                                    <br>
+                                    Tennishallen
+                                </p>
+                            </div>
+                            <div class="text-box">
+                                <p>
+                                    <strong>
+                                        Lördagar
+                                    </strong>
+                                    <br>
+                                    10:00-11:30
+                                    <br>
+                                    i Roslagshallen
+                                    <br>
+                                    (Roslagsgatan)
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="text desktop-only">
+                    <p>
+                        Bokning till spel sker på klubbens intranät som alla medlemmar har tillgång till
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="information-text row">
-            <div class="left-text desktop-only">
-                <p>
-                    Bokning till spel sker på klubbens intranät som alla medlemmar har tillgång till
-                </p>
-            </div>
-            <div class="right-text desktop-only">
-                <p>
-                    Lördagsturneringar spelas på Kungliga Tennishallen och oftast i handikappform
-                </p>
+            <div class="right">
+                <div class="area-box">
+                    <div class="column">
+                        <h2 class="background-blur">Turneringar</h2>
+                        <div class="row">
+                            <div class="text-box">
+                                <p>
+                                    3-4<br class="line-break">
+                                    <span class="avoid-wrap">
+                                        <strong><span class="avoid-wrap">lördags</span>&shy;<span class="avoid-wrap">turneringar</span></strong>
+                                    </span>
+                                    <br class="line-break">
+                                    varje år, med poolspel
+                                    <br class="line-break">
+                                    & slutspel
+                                </p>
+                            </div>
+                            <div class="text-box">
+                                <p>
+                                    <span class="avoid-wrap">
+                                        <strong><span class="avoid-wrap">Klubb</span>&shy;mästerskap</strong>
+                                    </span>
+                                    <br class="line-break">
+                                    (KM) under våren
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text desktop-only">
+                    <p>
+                        Lördagsturneringar spelas på Kungliga Tennishallen och oftast i handikappform
+                    </p>
+                </div>
             </div>
         </div>
     </section>
