--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                                         <strong><span class="avoid-wrap">lördags</span>&shy;<span class="avoid-wrap">turneringar</span></strong>
                                     </span>
                                     <br class="line-break">
-                                    varje år, med poolspel
+                                    varje år<span class="desktop-only">, med poolspel
                                     <br class="line-break">
-                                    & slutspel
+                                    & slutspel</span>
                                 </p>
                             </div>
                             <div class="text-box">
@@ -138,7 +138,7 @@
                     <img src="images/squash-balls-gray.png">
                     <div class="text-box">
                         <p>
-                            Helårsavgift för spel<br>endastlördagar<br>
+                            Helårsavgift för spel<br>endast lördagar<br>
                             <strong>
                                 3.500kr
                             </strong>
@@ -174,12 +174,18 @@
                                 Under en squashmatch använder du nästan alla muskler i kroppen. Det stärker både över- och underkroppen samt förbättrar din core-styrka.
                             </p>
                         </div>
-                        <div class="text-box">
+                        <div class="text-box desktop-only">
                             <p>
                                 <strong>Mental utmaning</strong><br>
                                 Squash kräver snabb beslutsfattning och strategiskt tänkande, vilket gör det till en utmärkt mental utmaning. Det hjälper till att förbättra din koncentration och reaktionsförmåga.
                             </p>
                         </div>
+                    </div>
+                    <div class="text-box mobile-only">
+                        <p>
+                            <strong>Mental utmaning</strong><br>
+                            Squash kräver snabb beslutsfattning och strategiskt tänkande, vilket gör det till en utmärkt mental utmaning. Det hjälper till att förbättra din koncentration och reaktionsförmåga.
+                        </p>
                     </div>
                     <div class="row stretch">
                         <div class="text-box">
