--- a/index.html
+++ b/index.html
@@ -161,46 +161,46 @@
                 <p>
                     Här är några anledningar till att du vill prova squash:
                 </p>
-                    <div class="row stretch">
-                        <div class="text-box">
-                            <p>
-                                <strong>Högintensiv träning</strong><br>
-                                Squash är en av de mest kaloriförbrännande sporterna. Det ger en utmärkt träning för hjärtat och förbättrar din uthållighet, snabbhet och smidighet.
-                            </p>
-                        </div>
-                        <div class="text-box">
-                            <p>
-                                <strong>Helkroppsträning</strong><br>
-                                Under en squashmatch använder du nästan alla muskler i kroppen. Det stärker både över- och underkroppen samt förbättrar din core-styrka.
-                            </p>
-                        </div>
-                        <div class="text-box desktop-only">
-                            <p>
-                                <strong>Mental utmaning</strong><br>
-                                Squash kräver snabb beslutsfattning och strategiskt tänkande, vilket gör det till en utmärkt mental utmaning. Det hjälper till att förbättra din koncentration och reaktionsförmåga.
-                            </p>
-                        </div>
+                <div class="row stretch">
+                    <div class="text-box">
+                        <p>
+                            <strong>Högintensiv träning</strong><br>
+                            Squash är en av de mest kaloriförbrännande sporterna. Det ger en utmärkt träning för hjärtat och förbättrar din uthållighet, snabbhet och smidighet.
+                        </p>
                     </div>
-                    <div class="text-box mobile-only">
+                    <div class="text-box">
+                        <p>
+                            <strong>Helkropps&shy;träning</strong><br>
+                            Under en squashmatch använder du nästan alla muskler i kroppen. Det stärker både över- och underkroppen samt förbättrar din core-styrka.
+                        </p>
+                    </div>
+                    <div class="text-box desktop-only">
                         <p>
                             <strong>Mental utmaning</strong><br>
                             Squash kräver snabb beslutsfattning och strategiskt tänkande, vilket gör det till en utmärkt mental utmaning. Det hjälper till att förbättra din koncentration och reaktionsförmåga.
                         </p>
                     </div>
-                    <div class="row stretch">
-                        <div class="text-box">
-                            <p>
-                                <strong>Socialt och roligt</strong><br>
-                                Squash är en social sport där du kan träffa nya människor och bygga vänskapsband. Det är också en rolig och engagerande aktivitet som gör träningen till ett nöje.
-                            </p>
-                        </div>
-                        <div class="text-box">
-                            <p>
-                                <strong>Flexibilitet</strong><br>
-                                Squash kan spelas året runt, oavsett väder, och det är lätt att hitta en partner att spela med. Det är en flexibel sport som passar alla åldrar och nivåer.
-                            </p>
-                        </div>
+                </div>
+                <div class="row stretch">
+                    <div class="text-box">
+                        <p>
+                            <strong>Socialt och roligt</strong><br>
+                            Squash är en social sport där du kan träffa nya människor och bygga vänskapsband. Det är också en rolig och engagerande aktivitet som gör träningen till ett nöje.
+                        </p>
                     </div>
+                    <div class="text-box">
+                        <p>
+                            <strong>Flexibilitet</strong><br>
+                            Squash kan spelas året runt, oavsett väder, och det är lätt att hitta en partner att spela med. Det är en flexibel sport som passar alla åldrar och nivåer.
+                        </p>
+                    </div>
+                </div>
+                <div class="text-box mobile-only">
+                    <p>
+                        <strong>Mental utmaning</strong><br>
+                        Squash kräver snabb beslutsfattning och strategiskt tänkande, vilket gör det till en utmärkt mental utmaning. Det hjälper till att förbättra din koncentration och reaktionsförmåga.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
@@ -211,7 +211,7 @@
                     Låter Kronoberg Squash Club som något för dig, eller har du några frågor?
                 </h2>
                 <p>Vänligen hör av dig.</p>
-                <div class="row stretch">
+                <div class="row">
                     <div class="text-box">
                         <p>
                             <strong>Mikael Wahlström</strong><br>
