--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="text desktop-only">
+                <div class="text">
                     <p>
                         Bokning till spel sker på klubbens intranät som alla medlemmar har tillgång till
                     </p>
@@ -104,13 +104,13 @@
                                         <strong><span class="avoid-wrap">Klubb</span>&shy;mästerskap</strong>
                                     </span>
                                     <br class="line-break">
-                                    (KM) under våren
+                                    (KM) <span class="avoid-wrap">under</span> våren
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="text desktop-only">
+                <div class="text">
                     <p>
                         Lördagsturneringar spelas på Kungliga Tennishallen och oftast i handikappform
                     </p>
@@ -121,11 +121,9 @@
     <section id="pricing" class="centered">
         <div class="area-box transparent">
             <div class="column">
-                <div class="text">
-                    <h2>
-                        Medlemsavgifter 2025
-                    </h2>
-                </div>
+                <h2>
+                    Medlemsavgifter 2025
+                </h2>
                 <div class="row stretch">
                     <div class="text-box">
                         <p>
@@ -154,13 +152,17 @@
                 <h2>
                     Varför spela squash?
                 </h2>
-                <p>
-                    Squash är en fantastisk sport som kombinerar <strong>rolig</strong> och 
-                    <strong>intensiv</strong> träning med socialt umgänge.
-                </p>
-                <p>
-                    Här är några anledningar till att du vill prova squash:
-                </p>
+                <div class="text">
+                    <p>
+                        Squash är en fantastisk sport som kombinerar <strong>rolig</strong> och 
+                        <strong>intensiv</strong> träning med socialt umgänge.
+                    </p>
+                </div>
+                <div class="text">
+                    <p>
+                        Här är några anledningar till att du vill prova squash:
+                    </p>
+                </div>
                 <div class="row stretch">
                     <div class="text-box">
                         <p>
@@ -217,7 +219,7 @@
                             <strong>Mikael Wahlström</strong><br>
                             Ordförande<br>
                             0708-10 55 60<br>
-                            <a href="mailto:mikael.wahlstrom@intermarketing.se">mikael.wahlstrom<br>@intermarketing.se</a>
+                            <a href="mailto:mikael.wahlstrom@intermarketing.se">mikael.wahlstrom<br class="line-break">@intermarketing.se</a>
                         </p>
                     </div>
                     <div class="text-box">
@@ -225,7 +227,7 @@
                             <strong>Bengt Eriksson</strong><br>
                             Löpande verksamheten<br>
                             070-959 55 56<br>
-                            <a href="mailto:bengt.gm.eriksson@gmail.com">bengt.gm.eriksson<br>@gmail.com</a>
+                            <a href="mailto:bengt.gm.eriksson@gmail.com">bengt.gm.eriksson<br class="line-break">@gmail.com</a>
                         </p>
                     </div>
                     <div class="text-box">
@@ -234,7 +236,7 @@
                             Turnerings-administration <br>
                             & resultatredovisning<br>
                             0766-27 92 00<br>
-                            <a href="mailto:connyzander@yahoo.com">connyzander<br>@yahoo.com</a>
+                            <a href="mailto:connyzander@yahoo.com">connyzander<br class="line-break">@yahoo.com</a>
                         </p>
                     </div>
                 </div>
