--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                                         <strong><span class="avoid-wrap">lördags</span>&shy;<span class="avoid-wrap">turneringar</span></strong>
                                     </span>
                                     <br class="line-break">
-                                    varje år<span class="desktop-only">, med poolspel
+                                    varje år, med poolspel
                                     <br class="line-break">
-                                    & slutspel</span>
+                                    & slutspel
                                 </p>
                             </div>
                             <div class="text-box">
