--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="row stretch">
                     <div class="text-box">
                         <p>
-                            Helårsavgift för spel<br>onsdagar & lördagar<br>
+                            Helårsavgift för spel <br class="line-break">onsdagar & lördagar<br class="line-break">
                             <strong>
                                 5.200kr
                             </strong>
@@ -136,7 +136,7 @@
                     <img src="images/squash-balls-gray.png">
                     <div class="text-box">
                         <p>
-                            Helårsavgift för spel<br>endast lördagar<br>
+                            Helårsavgift för spel <br class="linebreak">endast lördagar<br>
                             <strong>
                                 3.500kr
                             </strong>
