--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="row stretch">
                     <div class="text-box">
                         <p>
-                            Helårsavgift för spel <br class="line-break">onsdagar & lördagar<br class="line-break">
+                            Helårsavgift för spel <br class="line-break">onsdagar & lördagar<br>
                             <strong>
                                 5.200kr
                             </strong>
