--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="row stretch">
                     <div class="text-box">
                         <p>
-                            Helårsavgift för spel <br class="line-break">onsdagar & lördagar<br>
+                            <span class="avoid-wrap">Helårsavgift för spel</span><br class="line-break"> <span class="avoid-wrap">onsdagar & lördagar</span><br>
                             <strong>
                                 5.200kr
                             </strong>
@@ -136,7 +136,7 @@
                     <img src="images/squash-balls-gray.png">
                     <div class="text-box">
                         <p>
-                            Helårsavgift för spel <br class="linebreak">endast lördagar<br>
+                            <span class="avoid-wrap">Helårsavgift för spel</span><br class="line-break"> <span class="avoid-wrap">endast lördagar</span><br>
                             <strong>
                                 3.500kr
                             </strong>
@@ -249,7 +249,7 @@
             <ul>
                 <p>© Kronoberg Squash Club 2025</p>
                 <p>Bilder av Freepik från Flaticon</p>
-                <p>Webbsida skapad av <span>ARVID ALFORN</span></p>
+                <p>Webbsida skapad av <a href="https://arvidalforn.se"><img src="images/arvidalforn-logo.png" alt=""></a></p>
             </ul>
         </div>
     </footer>
