--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="text-box">
                         <p>
                             <strong>Conny Zander</strong><br>
-                            Turnerings-administration <br>
+                            Turnerings-administration <br class="line-break">
                             & resultatredovisning<br>
                             0766-27 92 00<br>
                             <a href="mailto:connyzander@yahoo.com">connyzander<br class="line-break">@yahoo.com</a>
