--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <div class="row stretch">
                     <div class="text-box">
                         <p>
-                            <strong>Socialt och roligt</strong><br>
+                            <strong>Socialt & roligt</strong><br>
                             Squash är en social sport där du kan träffa nya människor och bygga vänskapsband. Det är också en rolig och engagerande aktivitet som gör träningen till ett nöje.
                         </p>
                     </div>
