--- a/index.html
+++ b/index.html
@@ -197,11 +197,15 @@
                         </p>
                     </div>
                 </div>
-                <div class="text-box mobile-only">
-                    <p>
-                        <strong>Mental utmaning</strong><br>
-                        Squash kräver snabb beslutsfattning och strategiskt tänkande, vilket gör det till en utmärkt mental utmaning. Det hjälper till att förbättra din koncentration och reaktionsförmåga.
-                    </p>
+                <div class="mobile-only">
+                    <div class="row stretch">
+                        <div class="text-box">
+                            <p>
+                                <strong>Mental utmaning</strong><br>
+                                Squash kräver snabb beslutsfattning och strategiskt tänkande, vilket gör det till en utmärkt mental utmaning. Det hjälper till att förbättra din koncentration och reaktionsförmåga.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
