--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                         <div class="row">
                             <div class="text-box">
                                 <p>
-                                    3-4<br class="line-break">
+                                    3-4<br>
                                     <span class="avoid-wrap">
-                                        <strong><span class="avoid-wrap">lördags</span>&shy;<span class="avoid-wrap">turneringar</span></strong>
+                                        <strong>lördags&shy;turneringar</strong>
                                     </span>
-                                    <br class="line-break">
+                                    <br>
                                     varje år<span class="desktop-only">, med poolspel
                                     <br class="line-break">
                                     & slutspel</span>
@@ -101,10 +101,10 @@
                             <div class="text-box">
                                 <p>
                                     <span class="avoid-wrap">
-                                        <strong><span class="avoid-wrap">Klubb</span>&shy;mästerskap</strong>
+                                        <strong>Klubb&shy;mästerskap</strong>
                                     </span>
-                                    <br class="line-break">
-                                    (KM) <span class="avoid-wrap">under</span> våren
+                                    <br>
+                                    (KM) under våren
                                 </p>
                             </div>
                         </div>
@@ -124,10 +124,10 @@
                 <h2>
                     Medlemsavgifter 2025
                 </h2>
-                <div class="row stretch">
+                <div class="row">
                     <div class="text-box">
                         <p>
-                            Helårsavgift för spel<br class="line-break"> onsdagar & lördagar<br>
+                            Helårsavgift för spel<br> onsdagar & lördagar<br>
                             <strong>
                                 5.200kr
                             </strong>
@@ -136,7 +136,7 @@
                     <img src="images/squash-balls-gray.png">
                     <div class="text-box">
                         <p>
-                            Helårsavgift för spel<br class="line-break"> endast lördagar<br>
+                            Helårsavgift för spel<br> endast lördagar<br>
                             <strong>
                                 3.500kr
                             </strong>
