--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
                 <h2>
                     Låter Kronoberg Squash Club som något för dig, eller har du några frågor?
                 </h2>
-                <p>Vänligen hör av dig.</p>
+                <div class="text centered">
+                    <p>Vänligen hör av dig.</p>
+                </div>
                 <div class="row">
                     <div class="text-box">
                         <p>
