--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="left">
                 <div class="area-box">
                     <div class="column">
-                        <h2 class="background-blur">Vi spelar på</h2>
+                        <h2 class="background-blur">Speldagar</h2>
                         <div class="row">
                             <div class="text-box">
                                 <p>
@@ -214,7 +214,7 @@
         <div class="area-box transparent">
             <div class="column">
                 <h2>
-                    Låter Kronoberg Squash Club som något för dig, eller har du några frågor?
+                    Låter Kronoberg Squash Club som något för dig?
                 </h2>
                 <div class="text centered">
                     <p>Vänligen hör av dig.</p>
