--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css?v=2">
     <script src="https://kit.fontawesome.com/ec4ee37cd1.js" crossorigin="anonymous"></script>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <title>Kronoberg Squash Club 1992</title>
 </head>
 <body>
     <header class="centered">
